--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,6 +10,9 @@
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
+<form th:action="@{/login}" method="post">
+    <input type="submit" value="Sign In"/>
+</form>
 
 </body>
 </html>
