--- a/src/main/resources/templates/addTask.html
+++ b/src/main/resources/templates/addTask.html
@@ -3,12 +3,35 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Secretary </title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
 </head>
+
 <body>
+
+<div th:insert="scripts :: scripts"></div>
+
+<div th:insert="navbar :: navbar"></div>
+
+<div class="container">
+
+<div>
+    [[${resultMessage}]]
+</div>
 <form th:action="@{/tasks/add}" method="post">
     <div><label> Title : <input type="text" name="title"/> </label></div>
     <div><label> Description: <input type="text" name="description"/> </label></div>
     <div><input type="submit" value="Add"/></div>
 </form>
+
+</div>
+
 </body>
+
 </html>
