--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,20 +3,44 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
   <title>Secretary</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
 </head>
+
 <body>
+
+<div th:insert="scripts :: scripts"></div>
+
+<div th:insert="navbar :: navbar"></div>
+
+<div class="container">
+
 <div th:if="${param.error}">
   Invalid username and password.
 </div>
 <div th:if="${param.logout}">
   You have been logged out.
 </div>
-Login page
+
+
+Enter your name and password
 <form th:action="@{/login}" method="post">
   <div><label> User Name : <input type="text" name="username"/> </label></div>
   <div><label> Password: <input type="password" name="password"/> </label></div>
   <div><input type="submit" value="Sign In"/></div>
 </form>
-<a href="/registration">Add new user</a>
+
+  Don`t have an account?
+<a href="/registration">Register</a>
+
+</div>
+
 </body>
+
 </html>
