--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Secretary </title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
 </head>
+
 <body>
 
-<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+<div th:insert="scripts :: scripts"></div>
+
+<div th:insert="navbar :: navbar"></div>
+
+<div class="container">
+
+<h1 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h1>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
@@ -14,5 +29,8 @@
     <input type="submit" value="Sign In"/>
 </form>
 
+</div>
+
 </body>
+
 </html>
