--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,19 +3,39 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
   <title>Secretary </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
 </head>
+
 <body>
+
+<div th:insert="scripts :: scripts"></div>
+
+<div th:insert="navbar :: navbar"></div>
+
+<div class="container">
+
 <div th:if="${param.error}">
   Invalid username and password.
 </div>
 <div th:if="${param.logout}">
   You have been logged out.
 </div>
+
 <form th:action="@{/registration}" method="post">
   <div><label> User Name : <input type="text" name="name"/> </label></div>
   <div><label> Password: <input type="password" name="password"/> </label></div>
   <div><label> Phone number: <input type="text" name="phoneNumber"/> </label></div>
   <div><input type="submit" value="Register"/></div>
 </form>
+
+</div>
+
 </body>
+
 </html>
