--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/tasks">Tasks</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profile">Profile</a>
+                </li>
                 <li class="nav-item" th:action="@{/logout}" method="post">
                     <input type="submit" value="Sign Out"/>
                 </li>
