--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,36 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Secretary </title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
+    <title>Main Page</title>
 </head>
-
 <body>
-
-<div th:insert="scripts :: scripts"></div>
-
-<div th:insert="navbar :: navbar"></div>
-
-<div class="container">
-
-<h1 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h1>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
-<form th:action="@{/login}" method="post">
-    <input type="submit" value="Sign In"/>
-</form>
-
+<div layout:fragment="content" th:with="username=${#httpServletRequest.remoteUser}">
+    <h2 th:if="${!#strings.isEmpty(username)}" th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h2>
+    <h2 th:if="${#strings.isEmpty(username)}" th:inline="text">Welcome guest!</h2>
+    <div th:if="${#strings.isEmpty(username)}">
+        <form th:action="@{/login}" method="get">
+            <button class="btn btn-primary" type="submit">Sign In</button>
+        </form>
+        <span>Don`t have an account?</span>
+        <a href="/registration">Register</a>
+    </div>
 </div>
-
 </body>
-
 </html>
