--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,48 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Secretary </title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
-
+    <title>User Profile</title>
 </head>
-
 <body>
-
-<div th:insert="scripts :: scripts"></div>
-
-<div th:insert="navbar :: navbar"></div>
-
-<div class="container">
-
-    <h2 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h2>
-
-    <h4 th:inline="text">Add your mobile phone number to get Telegram notifications</h4>
-
+<div layout:fragment="content">
+    <h2 class="text-center" th:inline="text">Welcome, [[${#httpServletRequest.remoteUser}]]!</h2>
+    <p class="fst-italic" th:inline="text">Add your mobile phone number to get Telegram notifications</p>
     <form th:action="@{/profile}" method="post">
-        <div><label> Your number : <input type="text" name="phoneNumber"/> </label></div>
-        <div><input type="submit" value="Add"/></div>
+        <div class="row mb-3">
+            <label for="inputPhoneNumber" class="col-sm-2 col-form-label">Phone number:</label>
+            <div class="col-sm-6">
+                <input id="inputPhoneNumber" class="form-control" type="text" name="phoneNumber"/>
+            </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Add</button>
     </form>
-
-
-
-    <form th:action="@{/logout}" method="post">
-        <input type="submit" value="Sign Out"/>
-    </form>
-    <form th:action="@{/login}" method="post">
-        <input type="submit" value="Sign In"/>
-    </form>
-
 </div>
-
-
 </body>
-
 </html>
