--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
 <head>
-  <title>Secretary </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous">
+  <title>Register New User</title>
 </head>
-
 <body>
-
-<div th:insert="scripts :: scripts"></div>
-
-<div th:insert="navbar :: navbar"></div>
-
-<div class="container">
-
-<div th:if="${param.error}">
-  Invalid username and password.
+<div layout:fragment="content">
+  <form th:action="@{/registration}" method="post">
+    <div class="row mb-3">
+      <label for="inputName" class="col-sm-2 col-form-label">Username:</label>
+      <div class="col-sm-6">
+        <input id="inputName" class="form-control" type="text" name="name" />
+      </div>
+    </div>
+    <div class="row mb-3">
+      <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
+      <div class="col-sm-6">
+        <input id="inputPassword" class="form-control" type="password" name="password" />
+      </div>
+    </div>
+    <div class="row mb-3">
+      <label for="inputPhoneNumber" class="col-sm-2 col-form-label">Phone number:</label>
+      <div class="col-sm-6">
+        <input id="inputPhoneNumber" class="form-control" type="text" name="phoneNumber"/>
+      </div>
+    </div>
+    <button class="btn btn-primary" type="submit">Register</button>
+  </form>
 </div>
-<div th:if="${param.logout}">
-  You have been logged out.
-</div>
-
-<form th:action="@{/registration}" method="post">
-  <div><label> User Name : <input type="text" name="name"/> </label></div>
-  <div><label> Password: <input type="password" name="password"/> </label></div>
-  <div><label> Phone number: <input type="text" name="phoneNumber"/> </label></div>
-  <div><input type="submit" value="Register"/></div>
-</form>
-
-</div>
-
 </body>
-
 </html>
