--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -1,60 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Secretary</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/21.2.3/css/dx.light.css" />
-    <link rel="stylesheet" href="../static/index.css">
-
-    <script src="https://cdn3.devexpress.com/jslib/21.2.3/js/dx.all.js"></script>
+    <title>Tasks</title>
     <script src="../static/index.js"></script>
     <script src="../static/data.js"></script>
 </head>
-
-<body class="dx-viewport">
-
-<div th:insert="scripts :: scripts"></div>
-
-<div th:insert="navbar :: navbar"></div>
-
-<div class="container">
-
-<div>
-    [[${resultMessage}]]
+<!--<body class="dx-viewport">-->
+<body>
+<div layout:fragment="content">
+    <div>
+        [[${resultMessage}]]
+    </div>
+    <h1>Task list</h1>
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Date</th>
+            <th>Priority</th>
+        </tr>
+        <tr th:each = "task : ${tasks}">
+            <td th:text="${task.title}">123</td>
+            <td th:text="${task.description}">123</td>
+            <td th:text="${task.startDate}">123</td>
+            <td th:text="${task.priority}">123</td>
+        </tr>
+    </table>
+    <a href="/tasks/add">Add a new task</a>
 </div>
-
-<h1>Task list</h1>
-
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Date</th>
-        <th>Priority</th>
-    </tr>
-    <tr th:each = "task : ${tasks}">
-        <td th:text="${task.title}">123</td>
-        <td th:text="${task.description}">123</td>
-        <td th:text="${task.startDate}">123</td>
-        <td th:text="${task.priority}">123</td>
-    </tr>
-</table>
-
-<a href="/tasks/add">Add a new task</a>
-
-</div>
-
 <div id="scheduler"></div>
-
 </body>
-
 </html>
