Added DevExtreme widgets and a page with DxScheduler

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,6 +13,9 @@
                     <a class="nav-link" href="/tasks">Tasks</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/scheduler">Scheduler</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/profile">Profile</a>
                 </li>
 <!--                <li class="nav-item" th:if="${#httpServletRequest.isUserInRole('ROLE_ADMIN')}">-->
