--- a/src/main/resources/templates/scheduler.html
+++ b/src/main/resources/templates/scheduler.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout}">
 <head>
-    <title>Tasks</title>
-    <script src="../static/dataGrid.js"></script>
+    <title>Scheduler</title>
+    <script src="../static/scheduler.js"></script>
 </head>
 <body>
 <div layout:fragment="content">
-    <div id="dataGrid"></div>
+    <div id="scheduler"></div>
 </div>
 </body>
 </html>
