Minor fixes and code refactoring

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <footer th:fragment="footer" class="footer mt-auto py-3 bg-light">
     <div class="container">
-        <span class="text-center text-muted">&copy; 2021 Secretary</span>
+        <span class="text-center text-muted">&copy; 2021-2022 Secretary</span>
     </div>
 </footer>
